# Cambridge-Colleges-TSP

./: .env_sample  GA.py  README.md  config.py  distances.py  geocodes.py  map.py  polylines.py  pyproject.toml  requirements.txt  routes.py
Data/: Distances_table.csv  Geocodes.csv
Maps/: alternate_route.html  best_route.html  colleges_map.html
data/: directions.csv  geocodes.csv
maps/: alternate_route.html
src/: config.py  directions.py  distances.py  geocodes.py  map.py  routes.py  solver.py
