[project]
name = "colleges-tsp"
version = "0.1"
requires-python = ">=3.9"
dependencies = [
    "folium>=0.20.0",
    "googlemaps>=4.10.0",
    "numpy>=1.22.4",
    "pandas>=2.3.3",
    "polyline>=2.0.3",
    "python-dotenv>=1.2.1"
]

[tool.ruff]
# Target version (e.g., "py310")
target-version = "py312"
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable specific rules (e.g., "E" for Error, "F" for Pyflakes)
select = ["E", "F", "I"] 
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
